fixed moving display screen and made clear/delete button stretch

--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@
 
 
 .calc{
-    margin-top: 100px;
+    margin-top: 200px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -57,15 +57,23 @@
 
 }
 
-.row-one{
-    /* width:inherit;
-    height: 100px; */
+#row-one{
+    border: 1px solid black;
     display: flex;
     row-gap: 20px;
     gap: 10px;
     flex-direction: column;
     justify-content:flex-end;
     align-items: flex-end;
+    margin-top: 0px;
+    padding: 0px;
+    min-height: 157px;
+}
+
+.row-one > p {
+    margin-top: 5px;
+    margin-right: 15px;
+    margin-bottom: 5px;
 }
 
 #big-display{
@@ -76,14 +84,18 @@
     align-content: center;
 }
 
-/* #small-display{
-    position: fixed;
-    top: 15px;
-} */
+#row-two{
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-content: space-between;
+    gap: 22px;
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
 
 #row-two > .btn{
-    width: 130px;
-    margin: 5px;
+    width: 45%;
 }
 
 .row-three{
